Fix order cycle settings button misalignment in FF Fix issue with edit button on updated user profile report not loading in dialog

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -178,6 +178,11 @@ legend
 	display: inline-block;
 }
 
+.form-group.inline
+{
+    vertical-align: top;
+}
+
 #CartButton
 {
 	margin-right: 15px;
